cha-pre-live-flux2/cha-eks-5a/namespaces/pfawf-staging/namespace-pfawf-staging.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: pfawf-staging
  name: pfawf-staging
